digital signature added, TODO: sharing is caring